# MasterofJokes

./: .gitignore  Dockerfile  README.md  pyproject.toml
flaskr/: __init__.py  auth.py  db.py  error_register.py  joke.py  mod.py  schema.sql
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/jokes/: create.html  index.html  moderator.html  myjokes.html  takeAJoke.html  update.html  viewSingle.html
instance/: config.py  flaskr.sqlite
tests/: conftest.py  data.sql  test_auth.py  test_blog.py
